elpa-elpa4/envs/dev/hint/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
      app: hint
spec:
  selector:
    matchLabels:
      app: hint
  template:
    metadata:        
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "8081,8080"
      labels:
        app: hint
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 50m          
              memory: 500Mi      
            limits:
              cpu: 200m
              memory: 950Mi
