elpa-elpa4/envs/dev/hint/destination-metrics-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dest-rule-metrics
spec:
  host: dev-metrics-hint
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8081
        tls:
          mode: DISABLE
