elpa-elpa4/envs/dev/hint/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dest-rule
spec:
  host: dev-service-hint
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8080
        tls:
          mode: ISTIO_MUTUAL
