elpa-elpa4/envs/dev/hint/virtualservice-patch.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice
spec:
  hosts:
    - "dev-hint-elpa-elpa4.copsinop.de"
    - "dev-hint.elpa-elpa4.svc.cluster.local"
  gateways:
    - istio-system/mesh-gateway
    - mesh    
  http:
    - name: dev-hint-route
      route:
        - destination:
            host: dev-service-hint
            port:
              number: 8080
